# kplayer-rust-wrap

./: .gitmodules  Cargo.toml  Makefile
src/: Makefile  lib.rs
src/common/: callback.rs  error.rs  logger.rs  mod.rs  permission.rs  string.rs
src/kplayer/: mod.rs  unit.rs
src/kplayer/plugin/: mod.rs
src/kplayer/proto/: keys.rs  message.rs  mod.rs  msg_output.rs  msg_player.rs  msg_plugin.rs  msg_resource.rs  prompt_output.rs  prompt_player.rs  prompt_plugin.rs  prompt_resource.rs
src/kplayer/util/: argument.rs  core.rs  mod.rs  os.rs  string.rs
