[package]
name = "kplayer-rust-wrap"
version = "1.5.0"
authors = ["karaler <karaler@bytelang.com>"]
description = "libkplayer plugin wrap for rust"
homepage = "https://kplayer.bytelang.cn/development/plugin"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.25.2"