[package]
name = "kplayer-plugin-sdk"
version = "2.0.0"
authors = ["karaler <karaler@bytelang.com>"]
description = "libkplayer plugin wrap for rust"
homepage = "https://kplayer.bytelang.cn/development/plugin"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true

[dependencies]
lazy_static = "1.4.0"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
